# eFLL-balancing-robot

./: README.md  fuzzy_interface.m  main.py
Balancing_robot/: Balancing_robot.ino  complementary.h  mpu6050_test.ino
Filters/: filter.h  filter.ino
Filters/kalman_filter/: CMakeLists.txt  Makefile  kalman_filter.c  kalman_filter.h
Fuzzy_Figure/: type1.py
Simulink/: Simul.slx
figure/: FIS.m  FIS.mlx  main.py  type1.py  type2.py
filter/: README.md  filter.cpp  filter.ino
filter/kalman_filter/: kalman_filter.h
filters/: filter.cpp  filter.h
filters/kalman_filter/: CMakeLists.txt  Makefile  dataset.h  kalman_filter.c  kalman_filter.h  main.c
kalman_filter/: kalman.cpp  kalman.h  kalman_filter.ino
lowpass_complementary/: lowpass_complementary.ino
mpu/: mpu6050.cpp  mpu6050.h
mpu6050/: mpu6050.cpp  mpu6050.h
mpu_lib/: mpu6050.cpp  mpu6050.h
scripts/: type1.py  type2.py
simulink/: PID.slx
