CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT(KALMAN_FILTER)

MESSAGE(STATUS ${KALMAN_FILTER_BINARY_DIR})
MESSAGE(STATUS ${KALMAN_FILTER_SOURCE_DIR})

ADD_LIBRARY(kalman_filter_shared SHARED kalman_filter.c)

ADD_EXECUTABLE(kalman_filter ${SRC_LIST})
TARGET_LINK_LIBRARIES(kalman_filter kalman_filter_shared)
